--- a/customRecycler/src/main/res/layout-v15/pro_recycler.xml
+++ b/customRecycler/src/main/res/layout-v15/pro_recycler.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content">
@@ -47,4 +47,4 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 </RelativeLayout>
-</RelativeLayout>
+</merge>
